# Systemy-operacyjne-projekt

./: README.md
project1/: CMakeLists.txt  log.txt  main.cpp  project1  test  test.cpp
